# KiloCode_Zed_extension

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  KILOCODE_ZED_RESEARCH.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  SETUP_GUIDE.md  UI_CHAT_INTERFACE_ANALYSIS.md  extension.toml
.github/workflows/: ci.yml  release.yml
src/: api_client.rs  kilocode.rs  lib.rs
