[package]
name = "kilocode"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AI-powered coding assistant for Zed"
repository = "https://github.com/YOUR_USERNAME/kilocode-zed"
authors = ["KiloCode Contributors"]

[lib]
path = "src/kilocode.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
