[package]
name = "kilocode"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AI-powered coding assistant for Zed"
repository = "https://github.com/NexusNoir555/KiloCode_Zed_extension"
authors = ["NexusNoir555 <NexusNoir555@proton.me>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
